# zen

./: .gitignore  BeefProj.toml  BeefSpace.toml  ps-setup.ps1  todo.md
src/: CodeBuilder.bf  Generator.bf  Program.bf  StringCodeBuilder.bf
src/Builder/: Builder.bf  CompFile.bf  raylibLink.bf
src/Checker/: Checker.bf  Entity.bf  Scope.bf  Scoper.bf  Types.bf
src/Codegen/: CFIle.bf  Generator.bf  OLD_Generator.bf
src/Error/: ErrorManager.bf
src/Lexer/: Tokenizer.bf  Tokens.bf
src/Parser/: Ast.bf  Parser.bf  Parser_AstNodes.bf  Parser_Expressions.bf
src/Semantic/: Binder.bf  Builtin.bf  Checker.bf  Entity.bf  Resolver.bf  Scope.bf  Types.bf
src/VM/: ZVM.bf  Zir.bf
syntax/vscode/: README.md  package.json
syntax/vscode/syntaxes/: zen.tmLanguage.json
test/: fibonacci.zen  main.zen  main_b.zen  plsfix.zen  raylib.zen  test.zen  windows.zen
test/game/: assets.zen  crate.zen  draw.zen  entity.zen  game.zen  levels.zen  map.zen  player.zen
test/output/: main.c
test/output/src/: main.c  zen.h
test/output/vs/: CMakeLists.txt  GenerateProjectFiles.bat
test/std/: math.zen  memory.zen  print.zen
test/tests/: arrays.zen  casts.zen  chainabletypes.zen  error.zen  fibonacci.zen  pointers.zen  raylib.zen  tests.zen  things.zen  windows.zen
test/tests/checker/: loop_basic.zen
zen.tests/: BeefProj.toml
zen/src/: Program.bf  StringCodeBuilder.bf  Visitor.bf
zen/src/Builder/: BuildContext.bf  Builder.bf  CompFile.bf  SourceFile.bf  SourceLocation.bf
zen/src/Codegen/: Generator.bf  Generator_Stmt.bf
zen/src/Diagnostics/: Diagnostic.bf  DiagnosticManager.bf  DiagnosticRenderer.bf
zen/src/Error/: Errors.bf
zen/src/Lexer/: Tokenizer.bf  Tokens.bf
zen/src/Parser/: Ast.bf  DirectivePreprocessor.bf  Directives.bf  Parser.bf  Parser_AstNodes.bf  Parser_Expressions.bf
zen/src/Semantic/: Binder.bf  Builtin.bf  Checker.bf  Entity.bf  Resolver.bf  Scope.bf  Types.bf
zen/src/Utils/: StringCodeBuilder.bf
